--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <h1>Happy Birthday, [Name]!</h1>
-    <p>Welcome to your special birthday page!</p>
-    <div id="animation"></div>
-    <script src="script.js"></script> <!-- Link to your JS file -->
+    <!-- Loader element -->
+    <div class="loader"></div>
+
+    <!-- Main content -->
+    <div class="content">
+        <h1>Happy Birthday, [Name]!</h1>
+        <p>Welcome to your special birthday page!</p>
+        <div id="animation"></div>
+    </div>
+
+    <!-- Link to your JS file -->
+    <script src="script.js"></script>
 </body>
 </html>
