--- a/index.html
+++ b/index.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Loader element -->
     <div class="loader"></div>
-
-    <!-- Main content -->
-    <div class="content">
+    <div class="content hide-loader">
         <h1>Happy Birthday, [Name]!</h1>
         <p>Welcome to your special birthday page!</p>
-        <div id="animation"></div>
     </div>
-
-    <!-- Link to your JS file -->
     <script src="script.js"></script>
 </body>
 </html>
