--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday!</title>
+    <title>Happy Belated Birthday</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="loader"></div>
     <div class="content hide-loader">
-        <h1>Happy Birthday, [Name]!</h1>
-        <p>Welcome to your special birthday page!</p>
+        <h1><strong>Happy Belated Birthday</strong></h1>
+        <p>Ayesha Ghaniya Thamrin</p>
     </div>
     <script src="script.js"></script>
 </body>
