--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="loader"></div>
-    <div class="content hide-loader">
+    <div class="content">
         <h1><strong>Happy Belated Birthday</strong></h1>
         <p>Ayesha Ghaniya Thamrin</p>
     </div>
