--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Belated Birthday Ayesha!</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Loading Screen</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Loading Screen -->
+  <div id="loading" class="loading">
     <div class="loader"></div>
-    <div class="content">
-        <h1><strong>Happy Belated Birthday</strong></h1>
-        <p>Ayesha Ghaniya Thamrin</p>
-    </div>
-    <script src="script.js"></script>
+  </div>
+
+  <!-- Content -->
+  <div id="content" class="content" style="display: none;">
+    <h1>Happy Belated Birthday</h1>
+    <p>Ayesha Ghaniya Thamrin</p>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
