--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Loading Screen</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading Screen Example</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Loading Screen -->
-  <div id="loading" class="loading">
     <div class="loader"></div>
-  </div>
-
-  <!-- Content -->
-  <div id="content" class="content" style="display: none;">
-    <h1>Happy Belated Birthday</h1>
-    <p>Ayesha Ghaniya Thamrin</p>
-  </div>
-
-  <script src="script.js"></script>
+    <div class="content">
+        <h1>Happy Belated Birthday</h1>
+        <h2>Ayesha Ghaniya Thamrin</h2>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
