--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading Screen Example</title>
+    <title>Custom Font Example</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="loader"></div>
     <div class="content">
-        <h1>Happy Belated Birthday</h1>
-        <h2>Ayesha Ghaniya Thamrin</h2>
+        <!-- Display the image -->
+        <img src="images/orphic.png" alt="Happy Belated Birthday Ayesha Ghaniya Thamrin" class="birthday-image">
     </div>
     <script src="script.js"></script>
 </body>
