--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Font Example</title>
+    <title>Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Loader -->
     <div class="loader"></div>
+
+    <!-- Content to be displayed after loading -->
     <div class="content">
-        <img src="images/orphic.png" alt="Happy Belated Birthday Ayesha Ghaniya Thamrin" class="birthday-image">
+        <img src="images/orphic.png" class="birthday-image">
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
