--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Content to be displayed after loading -->
     <div class="content">
-        <img src="images/orphic.png" class="birthday-image">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" class="birthday-image" alt="">
     </div>
 
     <script src="script.js"></script>
