--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+    <title>Happy Belated Birthday</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Loader -->
-    <div class="loader"></div>
+    <!-- Loader Container -->
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
 
-    <!-- Content to be displayed after loading -->
-    <div class="content">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" class="birthday-image" alt="">
+    <!-- Content -->
+    <div class="content" style="display:none;">
+        <img src="images/ORPHIC.png" class="birthday-image">
     </div>
 
     <script src="script.js"></script>
