--- a/index.html
+++ b/index.html
@@ -3,20 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Belated Birthday</title>
+    <title>Loader Test</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Loader Container -->
-    <div class="loader-container">
-        <div class="loader"></div>
-    </div>
-
-    <!-- Content -->
-    <div class="content" style="display:none;">
-        <img src="images/ORPHIC.png" class="birthday-image">
-    </div>
-
-    <script src="script.js"></script>
+    <div class="loader"></div>
 </body>
 </html>
