--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loader Test</title>
+    <title>Loading Animation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="loader"></div>
+    <div id="loader" class="loader"></div>
+    <div id="content">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Image">
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
