--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="loader" class="loader"></div>
     <div id="content">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Happy Belated Birthday Ayesha Ghaniya Thamrin">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="">
     </div>
     <script src="script.js"></script>
 </body>
