--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="loader" class="loader"></div>
-    <div id="content" class="hidden">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Happy Belated Birthday Ayesha Ghaniya Thamrin">
+    <div id="content">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Happy Belated Birthday Ayesha Ghaniya Thamrin" id="orphicImage">
     </div>
     <script src="script.js"></script>
 </body>
