--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="overlay"></div>
     <div id="loader" class="loader"></div>
     <div id="content">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Happy Belated Birthday Ayesha Ghaniya Thamrin" id="orphicImage">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Image">
     </div>
     <script src="script.js"></script>
 </body>
