--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div id="loader" class="loader"></div>
-    <div class="overlay"></div>
-    <div id="content">
+    <div id="content" class="hidden">
         <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic Image">
     </div>
     <script src="script.js"></script>
