--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday</title>
+    <title>Special Birthday Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="loader" class="loader"></div>
-    <div id="content">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic Image">
+    <div id="content" class="content">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" class="title-image" alt="Orphic">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" class="pencet-image" alt="Pencet Aku" onclick="openStage3()">
     </div>
     <script src="script.js"></script>
 </body>
