--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="loader" class="loader"></div>
     
     <!-- Stage 2: Main Content with Background and Falling Images -->
-    <div id="main-content">
+    <div id="main-content" class="hidden">
         <!-- Orphic Image -->
-        <img id="orphic-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic" />
+        <img id="orphic-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic Image" />
         
         <!-- Falling Images Container -->
         <div id="falling-images"></div>
