--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday</title>
+    <title>Birthday Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="loader" class="loader"></div>
+    <!-- Stage 1: Loading Screen -->
+    <div id="loading-screen">
+        <div class="loader"></div>
+    </div>
+
+    <!-- Stage 2: Orphic and Buka Aku -->
     <div id="stage2" class="hidden">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" id="orphic-image" alt="Orphic Image">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" id="buka-aku" alt="Buka Aku">
-        <div id="falling-images"></div>
+        <img src="images/ORPHIC.png" alt="Orphic" id="orphic-image">
+        <img src="images/pencet%20aku.png" alt="Buka Aku" id="buka-aku" onclick="showStage3()">
     </div>
+
+    <!-- Stage 3: Love Letter -->
     <div id="stage3" class="hidden">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/Love%20Letter%20(1).png" id="love-letter" alt="Love Letter">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/right.png" id="next" alt="Next">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/left.png" id="previous" alt="Previous">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/close.png" id="close" alt="Close">
+        <img src="images/Love%20Letter%20(1).png" alt="Love Letter 1" id="love-letter">
+        <img src="images/left.png" alt="Previous" id="prev" class="hidden" onclick="prevLetter()">
+        <img src="images/right.png" alt="Next" id="next" onclick="nextLetter()">
+        <img src="images/x.png" alt="Close" id="close" onclick="closeStage3()">
     </div>
+
+    <!-- Falling Images -->
+    <div id="falling-images"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
