--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading Screen</title>
+    <title>Stage 1 - Loading Screen</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="loader"></div>
+    <div class="overlay">
+        <div class="loader"></div>
+    </div>
 </body>
 </html>
