--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stage 1 - Loading Screen</title>
+    <title>Special Birthday Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="overlay">
+    <!-- Stage 1: Loading Animation -->
+    <div id="stage1">
         <div class="loader"></div>
     </div>
+
+    <!-- Stage 2: Orphic Image, Buka Aku Button, and Falling Images -->
+    <div id="stage2" class="hidden">
+        <img id="orphic" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic">
+        <img id="buka-aku" src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Buka Aku">
+        <div class="falling-images"></div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
