--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Stage 2: Content -->
+    <!-- Stage 2: Content (Initially Hidden) -->
     <div id="stage-2" class="hidden">
         <img src="images/ORPHIC.png" alt="Orphic" class="orphic-image">
         <img src="images/pencet%20aku.png" alt="Pencet Aku" class="pencet-aku">
@@ -21,4 +21,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</ht
