--- a/index.html
+++ b/index.html
@@ -14,11 +14,5 @@
 
     <!-- Stage 2: Content (Initially Hidden) -->
     <div id="stage-2" class="hidden">
-        <img src="images/ORPHIC.png" alt="Orphic" class="orphic-image">
-        <img src="images/pencet%20aku.png" alt="Pencet Aku" class="pencet-aku">
-        <div id="falling-images-container"></div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
+        <div class="dark-overlay"></div>
+        <
