--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birthday Website</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Stage 1 and Stage 2</title>
 </head>
 <body>
     <!-- Stage 1: Loading Screen -->
-    <div id="loading-screen">
+    <div id="stage1">
         <div class="loader"></div>
     </div>
 
-    <!-- Stage 2 -->
-    <div id="stage-2" style="display: none;">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic" class="orphic-image">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Buka Aku" class="buka-aku-image">
-        <div id="falling-images-container"></div>
+    <!-- Stage 2: Content -->
+    <div id="stage2">
+        <img src="path/to/orphic.png" alt="Orphic" class="orphic-image">
+        <img src="path/to/buka-aku.png" alt="Buka Aku" class="buka-aku-image pulsing">
     </div>
 
     <script src="script.js"></script>
