--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Website</title>
+    <title>Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Stage 1: Loading Screen -->
-    <div id="stage1">
+    <div id="stage1" class="stage">
         <div class="loader"></div>
     </div>
-
-    <!-- Stage 2: Content -->
-    <div id="stage2">
-        <img src="path/to/orphic.png" alt="Orphic" class="orphic-image">
-        <img src="path/to/buka-aku.png" alt="Buka Aku" class="buka-aku-image pulsing">
+    
+    <!-- Stage 2: Main Content -->
+    <div id="stage2" class="stage" style="display: none;">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic" class="orphic">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Buka Aku" class="buka-aku-image">
+        <div id="falling-images"></div>
     </div>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
