--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Stage 1: Loading Screen -->
+    <!-- Stage 1: Loading Animation -->
     <div id="stage1" class="stage">
         <div class="loader"></div>
     </div>
-    
-    <!-- Stage 2: Main Content -->
+
+    <!-- Stage 2: Orphic Image and Buka Aku Button -->
     <div id="stage2" class="stage" style="display: none;">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic" class="orphic">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Buka Aku" class="buka-aku-image">
-        <div id="falling-images"></div>
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" class="orphic" alt="Orphic Image">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" class="buka-aku-image" alt="Buka Aku Image">
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
