--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Stages</title>
 </head>
 <body>
     <!-- Stage 1: Loading Animation -->
-    <div id="stage1" class="stage">
+    <div id="stage1">
         <div class="loader"></div>
     </div>
 
-    <!-- Stage 2: Orphic Image and Buka Aku Button -->
-    <div id="stage2" class="stage" style="display: none;">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" class="orphic" alt="Orphic Image">
-        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" class="buka-aku-image" alt="Buka Aku Image">
+    <!-- Stage 2: Orphic Image and Falling Images -->
+    <div id="stage2" class="hidden">
+        <img src="YOUR_ORPHIC_IMAGE_URL" class="orphic-image" alt="Orphic">
+        <img src="YOUR_BUKA_AKU_IMAGE_URL" class="buka-aku" alt="Buka Aku">
+        <div class="falling-images"></div>
     </div>
 
     <script src="script.js"></script>
