--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <!-- Stage 2: Orphic Image and Falling Images -->
     <div id="stage2" class="hidden">
-        <img src="YOUR_ORPHIC_IMAGE_URL" class="orphic-image" alt="Orphic">
-        <img src="YOUR_BUKA_AKU_IMAGE_URL" class="buka-aku" alt="Buka Aku">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" class="orphic-image" alt="Orphic">
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" class="buka-aku" alt="Buka Aku">
         <div class="falling-images"></div>
     </div>
 
