--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <!-- Stage 1: Loading Animation -->
-    <div id="stage1">
+    <div id="stage1" class="stage">
         <div class="loader"></div>
     </div>
 
     <!-- Stage 2: Orphic Image and Falling Images -->
-    <div id="stage2" class="hidden">
+    <div id="stage2" class="stage hidden">
         <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" class="orphic-image" alt="Orphic">
         <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" class="buka-aku" alt="Buka Aku">
         <div class="falling-images"></div>
