--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Stage 2: Orphic and Pencet Aku with Falling Images -->
+    <!-- Stage 2: Orphic and Pencet Aku -->
     <div id="stage2" class="stage hidden">
         <img id="orphic" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic Image">
         <img id="pencet-aku" src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Pencet Aku Image">
     </div>
-
-    <!-- Falling Images Container -->
-    <div id="falling-images-container" class="stage hidden"></div>
 
     <script src="script.js"></script>
 </body>
