--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website with Stages</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Website with Stages</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <!-- Stage 1: Loading Animation -->
-    <div id="stage1" class="stage">
-        <div class="loader"></div>
-    </div>
+  <!-- Stage 1: Loading Animation -->
+  <div id="stage1" class="stage">
+    <div class="loader"></div>
+  </div>
 
-    <!-- Stage 2: Orphic and Pencet Aku -->
-    <div id="stage2" class="stage hidden">
-        <img id="orphic" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic Image">
-        <img id="pencet-aku" src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Pencet Aku Image">
-    </div>
+  <!-- Stage 2: Orphic, Polaroid Slideshow, and Pencet Aku -->
+  <div id="stage2" class="stage hidden">
+    <img id="orphic" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic Image">
+    <img id="polaroid-slideshow" src="https://raw.githubusercontent.com/noy2high/comit/main/images/Vintage%20Effect%20Polaroid%20(1).png" alt="Polaroid Slideshow">
+    <img id="pencet-aku" src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Pencet Aku Image">
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
