--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
         <!-- Orphic Image -->
         <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" id="orphic-image" alt="Orphic Image">
 
-        <!-- Polaroid Images -->
-        <div id="polaroids">
-            <!-- Initially empty, images will be added via JavaScript -->
-        </div>
+        <!-- Polaroid Image -->
+        <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/Vintage%20Effect%20Polaroid%20(1).png" id="polaroid-image" alt="Polaroid Image">
 
         <!-- Pencet Aku Button -->
         <img src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" id="pencet-aku" alt="Pencet Aku Button">
