--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sss</title>
+    <title>stage 3</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +16,14 @@
     <div id="stage-2">
         <img id="orphic-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic Image">
         <img id="polaroid-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/Vintage%20Effect%20Polaroid%20(1).png" alt="Polaroid Image">
-        <img id="pencet-aku" src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Pencet Aku">
+        <img id="pencet-aku" src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Pencet Aku Button">
+    </div>
+
+    <!-- Stage 3: Love Letter -->
+    <div id="stage-3">
+        <img id="love-letter" src="https://raw.githubusercontent.com/noy2high/comit/main/images/Love%20Letter%20(1).png" alt="Love Letter">
+        <img id="left-btn" src="https://raw.githubusercontent.com/noy2high/comit/main/images/left.png" alt="Left Button">
+        <img id="right-btn" src="https://raw.githubusercontent.com/noy2high/comit/main/images/right.png" alt="Right Button">
     </div>
 
     <script src="script.js"></script>
