--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>stage 3</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>all wrong</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <!-- Stage 1: Loading Screen -->
-    <div id="loading-screen">
-        <div class="loader"></div>
-    </div>
+  <!-- Stage 1: Loading Screen -->
+  <div id="loading-screen">
+    <div class="loader"></div>
+  </div>
 
-    <!-- Stage 2: Content -->
-    <div id="stage-2">
-        <img id="orphic-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic Image">
-        <img id="polaroid-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/Vintage%20Effect%20Polaroid%20(1).png" alt="Polaroid Image">
-        <img id="pencet-aku" src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Pencet Aku Button">
-    </div>
+  <!-- Stage 2: Main Content -->
+  <div id="stage-2">
+    <img id="orphic-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/ORPHIC.png" alt="Orphic">
+    <img id="polaroid-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/Vintage%20Effect%20Polaroid%20(1).png" alt="Polaroid">
+    <img id="pencet-aku" src="https://raw.githubusercontent.com/noy2high/comit/main/images/pencet%20aku.png" alt="Pencet Aku">
+  </div>
 
-    <!-- Stage 3: Love Letter -->
-    <div id="stage-3">
-        <img id="love-letter" src="https://raw.githubusercontent.com/noy2high/comit/main/images/Love%20Letter%20(1).png" alt="Love Letter">
-        <img id="left-btn" src="https://raw.githubusercontent.com/noy2high/comit/main/images/left.png" alt="Left Button">
-        <img id="right-btn" src="https://raw.githubusercontent.com/noy2high/comit/main/images/right.png" alt="Right Button">
-    </div>
+  <!-- Stage 3: Love Letter Viewer -->
+  <div id="stage-3">
+    <img id="love-letter-image" src="https://raw.githubusercontent.com/noy2high/comit/main/images/Love%20Letter%20(1).png" alt="Love Letter">
+    <img id="left-button" src="https://raw.githubusercontent.com/noy2high/comit/main/images/left.png" alt="Left Button">
+    <img id="right-button" src="https://raw.githubusercontent.com/noy2high/comit/main/images/right.png" alt="Right Button">
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
